Fixed Python image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ title: Home
 	         <div class="flex flex-wrap justify-center mx-auto lg:max-w-3xl">
 	            <div class="flex p-4 md:p-8"><span data-tip="PHP" ><img src="/assets/images/php.svg" class="w-16 transition duration-500 ease-in-out transform md:w-20 hover:scale-110" alt="PHP"></span></div>
 	            <div class="flex p-4 md:p-8"><span data-tip="Terraform" ><img src="/assets/images/terraform.svg" class="w-16 transition duration-500 ease-in-out transform md:w-20 hover:scale-110" alt="Terraform"></span></div>
-	            <div class="flex p-4 md:p-8"><span data-tip="Python" ><img src="/assets/images/Python.svg" class="w-16 transition duration-500 ease-in-out transform md:w-20 hover:scale-110" alt="Python"></span></div>
+	            <div class="flex p-4 md:p-8"><span data-tip="Python" ><img src="/assets/images/python.svg" class="w-16 transition duration-500 ease-in-out transform md:w-20 hover:scale-110" alt="Python"></span></div>
 	            <div class="flex p-4 md:p-8"><span data-tip="github" ><img src="/assets/images/github.svg" class="w-16 transition duration-500 ease-in-out transform md:w-20 hover:scale-110" alt="github"></span></div>
 	            <div class="flex p-4 md:p-8"><span data-tip="mysql" ><img src="/assets/images/mysql.svg" class="w-16 transition duration-500 ease-in-out transform md:w-20 hover:scale-110" alt="mysql"></span></div>
 	         </div>
