--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 	                  Linux Guru  &amp; Devops Engineer
 	               </h2>
 	               <h3 class="w-full mb-6 text-xl text-center text-gray-800 font-body md:text-1xl lg:text-2xl dark:text-gray-100 md:text-left md:max-w-md lg:max-w-xl">
-	                  I love anything to do with Linux. I love coding in PHP &amp; Python. I love problem solving.
+	                  I'm a problem solver who loves anything to do with Linux and coding in PHP &amp; Python. 
 	               </h3>
 	               <center>
 	               <div class="flex flex-row items-center">
